--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
 	"name":"bossite",
 	"description":"annaBoss website"
-	"repository":"",
+	"repository":"https://github.com/runslow917/bossite",
 	"keywords":"",
 	"image":""
 }
