i think i fixed idk

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
 	"name":"bossite",
-	"description":"annaBoss website"
+	"description":"annaBoss website",
 	"repository":"https://github.com/runslow917/bossite",
 	"keywords":"",
 	"image":""
